# zestbay

./: .lilv_inline_fns_tmp.rs  .lilv_instance_tmp.rs  .lilv_sys_lib_tmp.rs  .qmlls.ini  Cargo.toml  LICENSE  README.md  build.rs  justfile  zestbay.desktop
.github/workflows/: rust.yml
crates/ui-bridge/: Cargo.toml
crates/ui-bridge/src/: main.rs  protocol.rs
icons/hicolor/: index.theme
pkg/deb/: build-deb.sh
pkg/nix/: default.nix  flake.nix
pkg/rpm/: build-rpm.sh  zestbay.spec
pkg/zestbay/: PKGBUILD
pkg/zestbay-git/: PKGBUILD
qml/: About.qml  CpuOverlay.qml  GraphView.qml  MidiMappings.qml  PluginBrowser.qml  PluginManager.qml  PluginParams.qml  Preferences.qml  RuleEditor.qml  Theme.qml  main.qml
src/: lv2.rs  main.rs  patchbay.rs  pipewire.rs  tray.rs  ui.rs
src/clap/: filter.rs  host.rs  mod.rs  scanner.rs  ui.rs
src/layout/: graph.rs  mod.rs  ordering.rs  ranking.rs  x_coords.rs  y_coords.rs
src/lv2/: filter.rs  host.rs  log.rs  mod.rs  options.rs  scanner.rs  state.rs  types.rs  ui.rs  ui_bridge_client.rs  urid.rs  worker.rs  x11_ui.rs
src/midi/: filter.rs  mod.rs  processing.rs  types.rs
src/patchbay/: manager.rs  mod.rs  rules.rs
src/pipewire/: manager.rs  mod.rs  state.rs  types.rs
src/plugin/: cpu_stats.rs  manager.rs  mod.rs  sandbox.rs  types.rs
src/ui/: app.rs  graph.rs  mod.rs  qobject_bridge.rs
src/ui_bridge/: main.rs
src/vst3/: com_host.rs  filter.rs  host.rs  mod.rs  scanner.rs  ui.rs
