[package]
name = "zestbay"
version = "0.2.1"
edition = "2024"
description = "A PipeWire patchbay application"
license = "MIT"

[dependencies]
# Qt6 via CXX-Qt
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }

# PipeWire
pipewire = "0.9"
libspa = "0.9"

# LV2 Plugin Hosting
lilv = "0.2"
lv2_raw = "0.3"

# CLAP Plugin Hosting
clap-sys = "0.5"

# VST3 Plugin Hosting
vst3 = "0.3"

# Threading & Sync
parking_lot = "0.12"

# Serialization (for config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System tray (D-Bus StatusNotifier)
ksni = { version = "0.3", features = ["blocking"] }

# System
libc = "0.2"

# Utilities
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
