[package]
name = "zestbay-ui-bridge"
version = "0.7.0"
edition = "2024"
description = "Standalone UI bridge process for ZestBay LV2 plugin hosting"

[[bin]]
name = "zestbay-ui-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
